# SupportSense-AI

./: .env_sample  .gitignore  LICENSE  README.md  SupportSense_app.py  main.py  pyproject.toml  requirements.txt  workflow.py
.devcontainer/: devcontainer.json
